--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# node
 node_modules
-coverage
-out
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
